# VI-Commander

./: CMakeLists.txt  LICENSE  README.md  commands.cpp  commands.h  errors.h  hello2.txt  helloe.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  panel.cpp  panel.h  pathtools.cpp  pathtools.h  resource.qrc
data/: hard_joj.txt  hello2.txt  joj.txt
data/ilya/: ilya.txt
windows/: catwindow.cpp  catwindow.h  catwindow.ui  copydialog.cpp  copydialog.h  copydialog.ui  editdialog.cpp  editdialog.h  editdialog.ui  linkdialog.cpp  linkdialog.h  linkdialog.ui  movedialog.cpp  movedialog.h  movedialog.ui  rightsdialog.cpp  rightsdialog.h  rightsdialog.ui  zpcontent.cpp  zpcontent.h  zpcontent.ui
